# ZygoteLoader

./: LICENSE  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: publish.yml
gradle/: libs.versions.toml
gradle-plugin/: build.gradle.kts
gradle-plugin/src/main/java/com/github/kr328/gradle/zygote/: ZygoteLoader.java  ZygoteLoaderDecorator.java  ZygoteLoaderExtension.java  ZygoteLoaderPlugin.java
gradle-plugin/src/main/java/com/v7878/zygisk/gradle/: ZygoteLoader.java  ZygoteLoaderDecorator.java  ZygoteLoaderExtension.java  ZygoteLoaderPlugin.java
plugin/: build.gradle.kts
plugin/src/main/java/com/v7878/zygisk/gradle/: Utils.java  ZygoteLoaderDecorator.java  ZygoteLoaderExtension.java  ZygoteLoaderPlugin.java
runtime/: build.gradle.kts
runtime/src/main/assets/customize.d/: 10-enforce-magisk-version.sh  21-enforce-abi.sh  30-place-libraries.sh  40-initialize-data-directory.sh  50-initialize-packages.sh  90-restore-module-permission.sh
runtime/src/main/cpp/: CMakeLists.txt  dex.c  dex.cpp  dex.h  dex.hpp  logger.hpp  main.c  main.cpp  main.h  main.hpp  main_zygisk.cpp  main_zygisk.h  mem.h  process.cpp  process.h  process.hpp  properties.c  properties.cpp  properties.h  properties.hpp  raii.cpp  raii.hpp  resource.cpp  resource.hpp  serializer.h
runtime/src/main/java/com/github/kr328/zloader/: ZygoteLoader.java
runtime/src/main/java/com/v7878/zygisk/: EntryPoint.java  Utils.java  ZygoteLoader.java
stub/: build.gradle.kts
stub/src/main/java/com/v7878/zygisk/: Bindings.java
(+13 files in other folders)
